--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -38,7 +38,7 @@
               <a class="nav-link text-white" href="/vos-rendez-vous">Vos rendez-vous</a>
             </li>
             <li class="nav-item pb-5">
-              <a class="nav-link text-white" href="/contact">Contacts</a>
+              <a class="nav-link text-white" href="/contact">Contact</a>
             </li>
             <hr class="border border-white opacity-100 border-1 m-5">
             {% if is_granted('ROLE_ADMIN') %}
