--- a/templates/main/aboutUs.html.twig
+++ b/templates/main/aboutUs.html.twig
@@ -1,13 +1,14 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 <section class="pagesSection" style="background-image: url('{{ asset("croixGrey.png") }}');">
+    <h1 class="titlesTop fst-italic fw-bolder text-center">Notre identité</h1>
 {% set counter = 0 %}
 {% for posts in post %}
     {% if counter is divisible by(2) %}
         <div class="container-fluid pt-5 pb-5">
             <div class="row content">
                 <div class="col-lg-12 subContent">
-                    <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
+                    <h1 class="pb-5 text-center">{{ posts.title }}</h1> 
                     {% if posts.mediaUrl is not null %}
                     <img class="img-fluid rounded-5 imgL" src="upload/images/{{ asset(posts.mediaUrl) }}">
                     {% endif %}
@@ -19,7 +20,7 @@
         <div class="container-fluid pt-5 pb-5">
             <div class="row content">
                 <div class="col-lg-12 subContent">
-                    <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
+                    <h1 class="pb-5 text-center">{{ posts.title }}</h1> 
                     {% if posts.mediaUrl is not null %}
                     <img class="img-fluid rounded-5 imgR" src="upload/images/{{ asset(posts.mediaUrl) }}">
                     {% endif %}
