--- a/templates/main/joinUs.html.twig
+++ b/templates/main/joinUs.html.twig
@@ -3,13 +3,14 @@
 
 {% block body %}
 <section class="pagesSection" style="background-image: url('{{ asset("croixGrey.png") }}');">
+    <h1 class="titlesTop fst-italic fw-bolder text-center">Nous rejoindre<br><small class="fw-lighter">( formulaire de recrutement en bas de page )</small></h1>
 {% set counter = 0 %}
 {% for posts in post %}
     {% if counter is divisible by(2) %}
         <div class="container-fluid pt-5 pb-5">
             <div class="row content">
                 <div class="col-lg-12 subContent">
-                    <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
+                    <h1 class="pb-5 text-center">{{ posts.title }}</h1> 
                     {% if posts.mediaUrl is not null %}
                     <img class="img-fluid rounded-5 imgL" src="upload/images/{{ asset(posts.mediaUrl) }}">
                     {% endif %}
@@ -21,7 +22,7 @@
         <div class="container-fluid pt-5 pb-5">
             <div class="row content">
                 <div class="col-lg-12 subContent">
-                    <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
+                    <h1 class="pb-5 text-center">{{ posts.title }}</h1> 
                     {% if posts.mediaUrl is not null %}
                     <img class="img-fluid rounded-5 imgR" src="upload/images/{{ asset(posts.mediaUrl) }}">
                     {% endif %}
@@ -35,34 +36,36 @@
 
     <div class="container-fluid pt-5 pb-5">
         <div class="row content">
-            <div class="col-6 mt-5 subContent text-center">
-                <h2></h2>
-                <a href="tel:+33385590487" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tèl : 03 85 59 04 87</a><br>
-                <a href="tel:+33677658774" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tèl : 06 77 65 87 74</a><br>
+            <div class="col-lg-6 mt-5 subContent text-center">
+                <a href="tel:+33385590487" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 03 85 59 04 87</a><br>
+                <a href="tel:+33677658774" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 06 77 65 87 74</a><br>
                 <a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">7 Av. Pierre le Vénérable, 71250 Cluny</a>
             </div>
 
-            <div class="col-6 mt-5 subContent" id="join_form">
+            <div class="col-lg-6 mt-5 subContent" id="join_form">
+                <h2 class="text-center">Formulaire de recrutement</h2>
                 {{ form_start(formulaire) }}
                     <div>
                         <div class="row">
-                            <div class="col-2 ps-3 pe-3">{{ form_row(formulaire.Civilite) }}</div>
-                            <div class="col-5 ps-3 pe-3">{{ form_row(formulaire.Nom) }}</div>
-                            <div class="col-5 ps-3 pe-3">{{ form_row(formulaire.Prenom) }}</div>
+                            <div class="col-lg-2 ps-3 pe-3">{{ form_row(formulaire.Civilite) }}</div>
+                            <div class="col-lg-5 ps-3 pe-3">{{ form_row(formulaire.Nom) }}</div>
+                            <div class="col-lg-5 ps-3 pe-3">{{ form_row(formulaire.Prenom) }}</div>
                         </div>
                         <div class="row">    
-                            <div class="col-6 ps-3 pe-3">{{ form_row(formulaire.Telephone) }}</div>
-                            <div class="col-6 ps-3 pe-3">{{ form_row(formulaire.email) }}</div>
+                            <div class="col-lg-6 ps-3 pe-3">{{ form_row(formulaire.Telephone) }}</div>
+                            <div class="col-lg-6 ps-3 pe-3">{{ form_row(formulaire.email) }}</div>
                         </div>
                     </div>
                     {{ form_row(formulaire.content) }}
                     <div class="row form-group pt-3">
-                        <div class="col-12 pe-3 ps-3">
+                        <div class="col-lg-12 pe-3 ps-3">
                             <label>Téléchargez votre C.V ci-dessous</label>
                         {{ form_row(formulaire.Fichier) }}
                         </div>
                     </div>
-                    {{ form_row(formulaire.envoyer) }}
+                    <div class="col-lg-12 ps-3 pe-3">
+                        {{ form_row(formulaire.envoyer) }}
+                    </div>
                 {{ form_end(formulaire) }}
                 {% for flashMessage in app.flashes('success') %}
                     <div class="alert alert-success m-5">
