--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -3,62 +3,63 @@
 {% block body %}
 
 <section class="pagesSection" style="background-image: url('{{ asset("croixGrey.png") }}');">
+    <h1 class="titlesTop fs-italic fw-bolder text-center">Vos rendez-vous</h1>
     <div class="container container-fluid pt-5 pb-5">
         <div class="row row content">
 
-            <div class="col-12 subContent">
+            <div class="col-lg-12 subContent">
                 {{ form_start(formulaire) }}
                 <div class="identity">
                     <h2 class="text-center"> Informations Personnelles </h2>
                     <div class="row">
-                        <div class="col-2 pe-3 ps-3">{{ form_row(formulaire.Civilite) }}</div>
-                        <div class="col-4 pe-3 ps-3">{{ form_row(formulaire.Nom) }}</div>
-                        <div class="col-4 pe-3 ps-3">{{ form_row(formulaire.Prenom) }}</div>
+                        <div class="col-lg-2 pe-3 ps-3">{{ form_row(formulaire.Civilite) }}</div>
+                        <div class="col-lg-4 pe-3 ps-3">{{ form_row(formulaire.Nom) }}</div>
+                        <div class="col-lg-4 pe-3 ps-3">{{ form_row(formulaire.Prenom) }}</div>
                     </div>
 
                     <div class="row">    
-                        <div class="col-6 pe-3 ps-3">{{ form_row(formulaire.Telephone) }}</div>
-                        <div class="col-6 pe-3 ps-3">{{ form_row(formulaire.email) }}</div>
+                        <div class="col-lg-6 pe-3 ps-3">{{ form_row(formulaire.Telephone) }}</div>
+                        <div class="col-lg-6 pe-3 ps-3">{{ form_row(formulaire.email) }}</div>
                     </div>
 
                     <div class="row">
-                        <div class="col-4 pe-3 ps-3">{{ form_row(formulaire.Rue) }}</div>
-                        <div class="col-4 pe-3 ps-3">{{ form_row(formulaire.Ville) }}</div>
-                        <div class="col-4 pe-3 ps-3">{{ form_row(formulaire.Postcode) }}</div>
+                        <div class="col-lg-4 pe-3 ps-3">{{ form_row(formulaire.Rue) }}</div>
+                        <div class="col-lg-4 pe-3 ps-3">{{ form_row(formulaire.Ville) }}</div>
+                        <div class="col-lg-4 pe-3 ps-3">{{ form_row(formulaire.Postcode) }}</div>
                     </div>
                 </div>
 
                 <div class="details mb-5 pt-5">
                     <h2 class="text-center pb-3"> Détails du Rendez-Vous </h2>
                     <div class="row">
-                        <div class="col-4 pe-3 ps-3">{{ form_row(formulaire.DateRendezVous) }}</div>
-                        <div class="col-4 pe-3 ps-3">{{ form_row(formulaire.HeureRendezVous) }}</div>
-                        <div class="col-4 pe-3 ps-3">{{ form_row(formulaire.DureeEstimee) }}</div>
+                        <div class="col-lg-4 pe-3 ps-3 pb-2"><label class="fs-4">Date du rendez-vous *</label>{{ form_row(formulaire.DateRendezVous) }}</div>
+                        <div class="col-lg-4 pe-3 ps-3"><label class="fs-4">Heure du rendez-vous *</label>{{ form_row(formulaire.HeureRendezVous) }}</div>
+                        <div class="col-lg-4 pe-3 ps-3"><label class="fs-4">Durée estimée *</label>{{ form_row(formulaire.DureeEstimee) }}</div>
                     </div>
 
                     <div class="row">
-                        <div class="col-6 pe-3 ps-3">{{ form_row(formulaire.LieuxRendezVous) }}</div>
-                        <div class="col-6 pe-3 ps-3">{{ form_row(formulaire.Prescripteur) }}</div>
+                        <div class="col-lg-6 pe-3 ps-3">{{ form_row(formulaire.LieuxRendezVous) }}</div>
+                        <div class="col-lg-6 pe-3 ps-3">{{ form_row(formulaire.Prescripteur) }}</div>
                     </div>
 
                     <div class="row">
-                        <div class="col-6 pe-3 ps-3">{{ form_row(formulaire.Motif) }}</div>
-                        <div class="col-6 pe-3 ps-3">{{ form_row(formulaire.TypeEtablissement) }}</div>
-                        <div class="col-6 pe-3 ps-3 text-center">
+                        <div class="col-lg-6 pe-3 ps-3">{{ form_row(formulaire.Motif) }}</div>
+                        <div class="col-lg-6 pe-3 ps-3">{{ form_row(formulaire.TypeEtablissement) }}</div>
+                        <div class="col-lg-6 pe-3 ps-3 text-center">
                             {{ form_label(formulaire.ModeTransport) }}
                             {{ form_widget(formulaire.ModeTransport) }}
                         </div>
-                        <div class="col-6 pe-3 ps-3 text-center">
+                        <div class="col-lg-6 pe-3 ps-3 text-center">
                             {{ form_label(formulaire.Aller) }}
                             {{ form_widget(formulaire.Aller) }}
                         </div>
                     </div>
-                    <div class="col-12 pe-3 ps-3 text-center">
+                    <div class="col-lg-12 pe-3 ps-3 text-center">
                         {{ form_row(formulaire.content) }}
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 pe-3 ps-3">
+                    <div class="col-lg-12 pe-3 ps-3">
                         {{ form_row(formulaire.envoyer) }}
                     </div>
                 </div>
