--- a/templates/main/joinUs.html.twig
+++ b/templates/main/joinUs.html.twig
@@ -14,7 +14,7 @@
                     {% if posts.mediaUrl is not null %}
                     <img class="img-fluid rounded-5 imgL" src="upload/images/{{ asset(posts.mediaUrl) }}">
                     {% endif %}
-                    <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
+                    <p>{{ posts.content|raw }}</p>
                 </div>
             </div>
         </div>
@@ -26,7 +26,7 @@
                     {% if posts.mediaUrl is not null %}
                     <img class="img-fluid rounded-5 imgR" src="upload/images/{{ asset(posts.mediaUrl) }}">
                     {% endif %}
-                    <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
+                    <p>{{ posts.content|raw }}</p>
                 </div>
             </div>
         </div>
