--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -34,7 +34,7 @@
         </div>
 
         
-        <div class="col-lg-6">
+        <div class="col-lg-6" id="diapo">
             <div id="carouselExampleAutoplaying" class="carousel slide fade-in-right" data-bs-ride="carousel" data-bs-pause="false">
                 <div id="carousel" class="carousel-inner text-center">
                     <div class="carousel-item active" data-bs-interval="3900">
