--- a/templates/main/aboutUs.html.twig
+++ b/templates/main/aboutUs.html.twig
@@ -1,73 +1,72 @@
 {% extends 'base.html.twig' %}
 {% block body %}
+<section class="pages_section" style="background-image: url('{{ asset("croixGrey.png") }}');">
+    <h1 class="titlesTop fst-italic fw-bolder text-center">Notre identité</h1>
+    <div class="container-fluid content fade-in-up pt-5 pb-5" id="about_desc">
+        
+            <div class="row col-lg-12 subContent">
+                <div class="col-12">
+                    <h2 class="text-center">Nos engagements</h2></br>
+                    <h4 class="text-center">Nous vous proposons des transports médicalisés sur Cluny et ses environs pour tous vos besoins et transferts.</h4></br>
+                    <p>En effet, dans différentes situations (accidents ou hospitalisation urgente mais encore transport médical sur rendez - vous), les particuliers peuvent bénéficier de nos services.</p>
+                    <p>Sur chacune de nos prestations et nos véhicules, nous garantissons :</p>
+                </div>
+                <div class="col-lg-3 col-sm-12 ps-2 pe-2">
+                    <i aria-hidden="true" class="fas fa-snowflake"></i>
+                    <h4>Le confort et l’hygiène :</h4>
+                    <p>nos ambulances sont climatisées, issues de la dernière génération et désinfectées quotidiennement.</p>
+                </div>
 
+                <div class="col-lg-3 col-sm-12 ps-2 pe-2">
+                    <i aria-hidden="true" class="fas fa-user-nurse"></i>
+                    <h4>Le professionnalisme :</h4>
+                    <p>nos ambulanciers sont tous diplômés d’État et mettront leur savoir-faire à votre disposition.</p>
+                </div>
 
-<section class="pagesSection" style="background-image: url('{{ asset("croixGrey.png") }}');">
-<h1 class="titlesTop fst-italic fw-bolder text-center">Notre identité</h1>
-<div class="container-fluid pt-5 pb-5">
-    <div class="content fade-in-up" id="about_desc">
-        <div class="row col-lg-12 subContent">
-            <div class="col-12 ps-2 pe-2">
-                <h2 class="text-center">Nos engagements</h2></br>
-                <h4 class="text-center">Nous vous proposons des transports médicalisés sur Cluny et ses environs pour tous vos besoins et transferts.</h4></br>
-                <p>En effet, dans différentes situations (accidents ou hospitalisation urgente mais encore transport médical sur rendez - vous), les particuliers peuvent bénéficier de nos services.</p>
-                <p>Sur chacune de nos prestations et nos véhicules, nous garantissons :</p>
-            </div>
-            <div class="col-lg-3 col-sm-12 ps-2 pe-2">
-                <i aria-hidden="true" class="fas fa-snowflake"></i>
-                <h4>Le confort et l’hygiène :</h4>
-                <p>nos ambulances sont climatisées, issues de la dernière génération et désinfectées quotidiennement.</p>
-            </div>
+                <div class="col-lg-3 col-sm-12 ps-2 pe-2">
+                    <i aria-hidden="true" class="fas fa-shield-virus"></i>
+                    <h4>La sécurité :</h4>
+                    <p>nos véhicules sont équipés du matériel de premier secours et de réanimation dernier cri. De plus, nous disposons d’oxygène à bord.</p>
+                </div>
 
-            <div class="col-lg-3 col-sm-12 ps-2 pe-2">
-                <i aria-hidden="true" class="fas fa-user-nurse"></i>
-                <h4>Le professionnalisme :</h4>
-                <p>nos ambulanciers sont tous diplômés d’État et mettront leur savoir-faire à votre disposition.</p>
+                <div class="col-lg-3 col-sm-12 ps-2 pe-2">
+                    <i aria-hidden="true" class="fas fa-stopwatch"></i>
+                    <h4>Une intervention 7j/7 et 24h/24 :</h4>
+                    <p>nos véhicules sont disponible tous les jours à n'importe quel moment.</p>
+                </div>
             </div>
-
-            <div class="col-lg-3 col-sm-12 ps-2 pe-2">
-                <i aria-hidden="true" class="fas fa-shield-virus"></i>
-                <h4>La sécurité :</h4>
-                <p>nos véhicules sont équipés du matériel de premier secours et de réanimation dernier cri. De plus, nous disposons d’oxygène à bord.</p>
-            </div>
-
-            <div class="col-lg-3 col-sm-12 ps-2 pe-2">
-                <i aria-hidden="true" class="fas fa-stopwatch"></i>
-                <h4>Une intervention 7j/7 et 24h/24 :</h4>
-                <p>nos véhicules sont disponible tous les jours à n'importe quel moment.</p>
-            </div>
-        </div>
+        
     </div>
-{% set counter = 0 %}
-{% for posts in post %}
-    {% if counter is divisible by(2) %}
-        <div class="container-fluid pt-5 pb-5">
-            <div class="row content">
-                <div class="col-lg-12 subContent">
-                    <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
-                    {% if posts.mediaUrl is not null %}
-                    <img class="img-fluid rounded-5 imgL fade-in-left" id="about_img" src="upload/images/{{ asset(posts.mediaUrl) }}">
-                    {% endif %}
-                    <p>{{ posts.content|raw }}</p>
+    {% set counter = 0 %}
+    {% for posts in post %}
+        {% if counter is divisible by(2) %}
+            <div class="container-fluid pt-5 pb-5">
+                <div class="row content">
+                    <div class="col-lg-12 subContent">
+                        <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
+                        {% if posts.mediaUrl is not null %}
+                        <img class="img-fluid rounded-5 imgL fade-in-left" id="about_img" src="upload/images/{{ asset(posts.mediaUrl) }}">
+                        {% endif %}
+                        <p>{{ posts.content|raw }}</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        {% else %}
-        <div class="container-fluid pt-5 pb-5">
-            <div class="row content">
-                <div class="col-lg-12 subContent">
-                    <h1 class="pb-5 text-center">{{ posts.title }}</h1> 
-                    {% if posts.mediaUrl is not null %}
-                    <img class="img-fluid rounded-5 imgR fade-in-right" id="about_img" src="upload/images/{{ asset(posts.mediaUrl) }}">
-                    {% endif %}
-                    <p >{{ posts.content|raw }}</p>
+            {% else %}
+            <div class="container-fluid pt-5 pb-5">
+                <div class="row content">
+                    <div class="col-lg-12 subContent">
+                        <h1 class="pb-5 text-center">{{ posts.title }}</h1> 
+                        {% if posts.mediaUrl is not null %}
+                        <img class="img-fluid rounded-5 imgR fade-in-right" id="about_img" src="upload/images/{{ asset(posts.mediaUrl) }}">
+                        {% endif %}
+                        <p >{{ posts.content|raw }}</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    {% endif %}
+        {% endif %}
 
-    {% set counter = counter + 1 %}
-{% endfor %}
+        {% set counter = counter + 1 %}
+    {% endfor %}
 </section>
 
 <script>
