--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -1,8 +1,6 @@
 {% extends 'base.html.twig' %}
-
 {% block body %}
-
-<section class="pagesSection" style="background-image: url('{{ asset("croixGrey.png") }}');">
+<section class="pages_section" style="background-image: url('{{ asset("croixGrey.png") }}');">
     <h1 class="titlesTop fs-italic fw-bolder text-center">Vos rendez-vous</h1>
     <div class="container container-fluid pt-5 pb-5">
         <div class="row row content">
