--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -58,21 +58,21 @@
     height: 100%!important;
 }
 
-#titleDesc {
+#title_desc {
     height: 85vh!important;
 }
 
-#buttonsContainer {
+#buttons_container {
     height: 15vh!important;
     width: 100%;
 }
 
-#buttonsContainer button {
+#buttons_container button {
     width: 33.33% !important;
     height: auto !important;
 }
 
-#buttonsContainer button a{
+#buttons_container button a{
     width: 100% !important;
     height: 100% !important;
     
@@ -83,8 +83,8 @@
     height: 85vh!important
 }
 
-#buttonsContainer button:hover, 
-#buttonsContainer button:focus {
+#buttons_container button:hover, 
+#buttons_container button:focus {
     background-color: #5C84B7!important;
 }
 
