--- a/assets/styles/_!home.scss
+++ b/assets/styles/_!home.scss
@@ -85,14 +85,10 @@ font-size: 3rem !important;
         width: 90vw!important;
     }
 
-    .sub_content {
-        height: auto;
-    }
-
-    .sub_content img {
-        height: 50% !important;
-        margin: 0 0 15px 0;
-    }
+    // .sub_content img {
+    //     height: 50% !important;
+    //     margin: 0 0 15px 0;
+    // }
     .sub_content p {
         text-align: center !important;
     }
