--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -244,6 +244,10 @@
         transform: none !important;
         opacity:1;
     }
+
+    #diapo {
+        display: none !important;
+    }
  }
 
 // -------------------- Grid Animation --------------------
