update img size

--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -77,7 +77,7 @@
         </div>           
 </section>
 
-<section class="grid_gallery" style="background-image: url('{{ asset("croixGrey.png") }}');">
+<section class="grid_gallery" style="background-image: url('{{ asset("croix.png") }}');">
     <h2 class="text-center pt-5 fw-bolder">Nos actualités</h2>
     <div class="container">
         <div class="row justify-content-center">
