--- a/assets/styles/_!home.scss
+++ b/assets/styles/_!home.scss
@@ -38,6 +38,7 @@ small {
 
 .img_left {
     max-width: 1000px !important;
+    max-height: 1000px !important;
     height: auto !important;
     float: left;
     margin: 10px 20px 10px 0;
@@ -45,6 +46,7 @@ small {
 
 .img_right {
     max-width: 1000px !important;
+    max-height: 1000px !important;
     height: auto !important;
     float: right;
     margin: 10px 20px 10px 0;
