--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-<section class="pages_section" style="background-image: url('{{ asset('croixGrey.png') }}');">
+<section class="pages_section" style="background-image: url('{{ asset('croix-bleu.png') }}');">
     <h1 class="titles_top fst-italic fw-bolder text-center">Nos actualités</h1>
     <div class="container-fluid pt-5 pb-5">
         <div class="row content">
